--- a/vars.html
+++ b/vars.html
@@ -9,7 +9,21 @@
     <h1>JavaScript Variables</h1>
 
     <script>
-// your code goes here!
+    	var year = prompt("What is the year you were born?");
+    	year = parseInt(year);
+
+    	var luckyNumber = prompt ("What us your lucky number" )
+    	luckyNumber = parseInt(luckyNumber)
+
+    	favFruit = "watermalon"
+    	favSubject = "math"
+
+    	console.log(year%luckyNumber)
+    	console.log (year+luckyNumber)
+    	console.log (year+favSubject)
+    	console.log (favFruit+year+luckyNumber)
+    	console.log (year+luckyNumber+favSubject)
+
     </script>
 </body>
 
